troubleshoot gap after nav-bar by fixing h2 margin-top

--- a/css/home-style.css
+++ b/css/home-style.css
@@ -10,6 +10,7 @@ h2 {
     font-size: 2rem;
     color: white;
     text-align: center;
+    margin-top: 0;
 }
 
 span {
@@ -38,7 +39,6 @@ video {
     top: 0;
     height: 80px;
     width: 100%;
-    margin-bottom: 0;
     grid-template-rows: 5rem;
     grid-template-columns: repeat(6, 1fr);
     gap: 1.5rem;
